--- a/learngit/myproject/myproject/templates/home.html
+++ b/learngit/myproject/myproject/templates/home.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
+{#'/static/'#}
 <html>
   <head>
     <meta charset="utf-8">
     <title>Boards</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   </head>
   <body>
     <h1>Boards</h1>
