creat First User

--- a/learngit/myproject/myproject/templates/base.html
+++ b/learngit/myproject/myproject/templates/base.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
   </head>
   <body>
+  {% block body %}
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
+            
       </div>
+
   </nav>
     <div class="container">
       <ol class="breadcrumb my-4">
@@ -20,5 +23,6 @@
       {% block content %}
       {% endblock %}
     </div>
+  {% endblock body %}
   </body>
 </html>
