--- a/learngit/myproject/myproject/templates/includes/form.html
+++ b/learngit/myproject/myproject/templates/includes/form.html
@@ -20,7 +20,7 @@
     {% endif %}
    {% if field.help_text %}
       <small class="form-text text-muted">
-        {{ field.help_text }}
+        {{ field.help_text|safe }}
       </small>
     {% endif %}
 </div>
