--- a/learngit/myproject/myproject/templates/base.html
+++ b/learngit/myproject/myproject/templates/base.html
@@ -3,18 +3,44 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Django Boards{% endblock %}</title>
-<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
   </head>
+  {% block stylesheet %}
+  {% endblock %}
   <body>
   {% block body %}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-          <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
-            
-      </div>
-
-  </nav>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainMenu">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+            {% if user.is_authenticated %}
+          <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ user.username }}
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+            <a class="dropdown-item" href="#">My account</a>
+            <a class="dropdown-item" href="#">Change password</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+          </div>
+        </li>
+      </ul>{% else %}
+                <form class="form-inline ml-auto">
+                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Login In</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                </form>
+            {% endif %}
+    </div>
+  </div>
+</nav>
     <div class="container">
       <ol class="breadcrumb my-4">
         {% block breadcrumb %}
@@ -24,5 +50,8 @@
       {% endblock %}
     </div>
   {% endblock body %}
+  <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
