--- a/learngit/myproject/myproject/templates/signup.html
+++ b/learngit/myproject/myproject/templates/signup.html
@@ -1,13 +1,30 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% block stylesheet %}
+    <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
 {% block body %}
   <div class="container">
-    <h2>SignUp</h2>
-    <form method="post" novalidate>
-        {% csrf_token %}
-        {% include 'includes/form.html' %}
-{#        表单在这里渲染为p标签##}
-        <button type="submit" class="btn btn-primary">Create an account</button>
-    </form>
+    <h1 class="text-center">
+        <a href="{% url 'home' %}">Django Boards</a>
+    </h1>
+  <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10 col-sm-12">
+          <div class="card">
+              <div class="card-body">
+                  <h3 class="card-title">Sign up</h3>
+                  <form method="post" novalidate>
+                      {% csrf_token %}
+                      {% include 'includes/form.html' %}
+                        <button type="submit" class="btn btn-primary btn-block">Create an account</button>
+                  </form>
+              </div>
+              <div class="card-footer text-muted text-center">
+            Already have an account? <a href="#">Log in</a>
+          </div>
+          </div>
+      </div>
+  </div>
   </div>
 {% endblock %}
