--- a/learngit/myproject/myproject/templates/login.html
+++ b/learngit/myproject/myproject/templates/login.html
@@ -1,29 +1,28 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block stylesheet %}
-    <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-{% endblock %}
-{% block body %}
-<div class="container">
-    <h1 class="text-center logo my-4">
-         <a href="{% url 'home' %}">Django Boards</a>
-    </h1>
-    <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-6 col-sm-8">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Sign up</h3>
-                    <form method="post" novalidate>
-                        {% csrf_token %}
-                        {% include 'includes/form.html' %}
-                        <button type="submit" class="btn btn-primary btn-block">Create an account</button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted text-center">
-                    Already have an account? <a href="{% url 'login' %}">Log In</a>
-                </div>
-            </div>
+{% extends 'base_accounts.html' %}
+
+{% block title %}Log in to Django Boards{% endblock %}
+
+{% block content %}
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-8">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Log in</h3>
+          <form method="post" novalidate>
+            {% csrf_token %}
+            {% include 'includes/form.html' %}
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+          </form>
         </div>
+        <div class="card-footer text-muted text-center">
+          New to Django Boards? <a href="{% url 'signup' %}">Sign up</a>
+        </div>
+      </div>
+      <div class="text-center py-2">
+        <small>
+          <a href="#" class="text-muted">Forgot your password?</a>
+        </small>
+      </div>
     </div>
-</div>
+  </div>
 {% endblock %}
